# turbo-scrum2

./: .gitignore  package-lock.json  package.json  tailwind.config.js
src/: store.ts  style.css  types.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2023-01-22-085851_create_sprints/: down.sql  up.sql
src-tauri/migrations/2023-01-22-090550_create_tasks/: up.sql
src-tauri/migrations/2023-01-23-192104_create_time_entries/: down.sql  up.sql
src-tauri/src/: commands.rs  db.rs  main.rs  models.rs  schema.rs
src/components/: ActiveTask.tsx  DropdownMenu.tsx  Header.tsx  PlayPauseButton.tsx  TaskRow.tsx
src/lib/: loadSprint.ts
src/pages/: _app.tsx  index.tsx  report.tsx  task.tsx
src/pages/tasks/: [id].tsx
